# CK3-AIs-Weight-Gen

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ai_model_manager.py  check_weights.sh  ck3_trigger_generator.py  config.default.json  config_manager.py  create_config.py  event_parser.py  main.py  menu.sh  model_organizer.py  pyproject.toml  quick_weight_check.py  run.sh  run_tests.sh  setup.cfg  setup_config.py  weight_calculator.py
data/: descriptor.mod  triggers_detailed.json
docs/: CK3_SYNTAX_ANALYSIS.md  CONDITION_IDENTIFIER_SYSTEM.md  CURSOR_SETUP.md  README.md  TRAIT_INTERACTIONS.md  WEIGHT_CALCULATOR_README.md
events/: historical_character_events.txt  test_events.txt
examples/: example_integer_weights.py  example_usage.py
models/: README.md  model_documentation.md
models/Characters/: character_models.json
models/Conditions/: condition_models.json
models/Traits/: education_traits.json  personality_traits.json
schemas/: config.schema.json  models.schema.json
src/: __init__.py  ai_model_manager.py  ck3_mod_manager.py  ck3_parser.py  ck3_trigger_generator.py  condition_manager.py  config_manager.py  create_config.py  event_parser.py  model_organizer.py  weight_calculator.py
tests/: test_condition_identifiers.py  test_condition_system.py  test_config.py
